fix small alignment issues

--- a/src/components/RecipeDisplay.scss
+++ b/src/components/RecipeDisplay.scss
@@ -8,6 +8,7 @@
     width: 100%;
 
     button {
+      line-height: 1.5;
       text-align: left;
     }
   }
