--- a/src/components/RotationDisplay.scss
+++ b/src/components/RotationDisplay.scss
@@ -1,4 +1,5 @@
 .RotationDisplay {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
